force-app/main/default/objects/Billing_Account__c/fields/Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Number__c</fullName>
    <description>Account number that serves as external identifier for billing accounts.</description>
    <externalId>true</externalId>
    <label>Billing Account Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>