force-app/main/default/objects/Billing_Account__c/fields/Current_Billing_Cycle_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Billing_Cycle_Start_Date__c</fullName>
    <label>Current Billing Cycle Start Date</label>
    <type>Date</type>
</CustomField>