force-app/main/default/objects/Billing_Account__c/listViews/LWC_Billing_Accounts.listView-meta.xml
<ListView>
    <fullName>LWC_Billing_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Billing_Account_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>LWC Billing Accounts</label>
</ListView>